--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ unstructured==0.14.4 # Document loading
 chromadb==0.5.0 # Vector storage
 openai==1.31.1 # For embeddings
 tiktoken==0.7.0  # For embeddings 
+pypdf==4.12.2  # For PDF-format data
+pytest==8.3.4  # For testing LLM output
 
 # install markdown depenendies with: `pip install "unstructured[md]"` after install the requirements file. Leave this line commented out. 
