--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@ unstructured==0.14.4 # Document loading
 # For Windows users, install Microsoft Visual C++ Build Tools first
 # install onnxruntime before installing `chromadb`
 chromadb==0.5.0 # Vector storage
-openai==1.31.1 # For embeddings
+openai==1.63.2 # For embeddings
 tiktoken==0.7.0  # For embeddings 
 pypdf==4.12.2  # For PDF-format data
 pytest==8.3.4  # For testing LLM output
+boto3==1.36.26  # For testing
 
 # install markdown depenendies with: `pip install "unstructured[md]"` after install the requirements file. Leave this line commented out. 
